--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -20,9 +20,10 @@ $fonts: (
   }
 }
 
-// @font-face {
-//   font-family: "Helvetica-now-text";
-//   src: url("../../assets/fonts/HelveticaNow/HelveticaNowText-Regular.woff2");
-//   font-weight: 400;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: "Helvetica-medium";
+  src: url("../../assets/fonts/HelveticaNowMedium/HelveticaNowText-Medium.woff")
+    format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
