--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import "./fonts.scss", "./mixins.scss";
+@import "./fonts.scss", "./mixins.scss", "./transitions.scss";
 
 * {
   margin: 0;
@@ -10,6 +10,7 @@
   --main-font: "Helvetica-now-text", Inter, sans-serif;
   --text-color: #111111;
   --gray-color: #f5f5f5;
+  --dim-color: rgba(17, 17, 17, 0.36);
   font-family: var(--main-font);
   color: var(--text-color);
 }
@@ -21,6 +22,20 @@ a {
 
 li {
   list-style: none;
+}
+
+body {
+  min-width: 320px;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
+
+button {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .container {
